@@ -1,5 +1,6 @@
 2021.??.??
   * IMDb: Fixed getting genre tags
+  * bB: Fixed science.fiction tag
 
 
 2021.08.12
